<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".registro_student">

    <Button
        android:id="@+id/bt_registrarse2"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="231dp"
        android:background="@drawable/boton_amarillo"
        android:fontFamily="@font/bold"
        android:text="@string/bt_registrarse"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_telefonoeme" />

    <EditText
        android:id="@+id/et_nombre2"
        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        android:textColor="@color/gris"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_apellidos2"
        android:layout_width="345dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:textColor="@color/gris"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_apellidos"
        android:inputType="textPersonName"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre2" />

    <EditText
        android:id="@+id/et_escuela2"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_escuela"
        android:inputType="textPersonName"
        android:textColor="@color/gris"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/et_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellidos2" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_telefono"
        android:inputType="number"
        android:textColor="@color/gris"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellidos2" />

    <EditText
        android:id="@+id/et_telefonoeme"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/st_telefonoad"
        android:inputType="number"
        android:textColor="@color/gris"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password2" />

    <EditText
        android:id="@+id/et_correo2"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:textColor="@color/gris"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_correo"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_escuela2" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:textColor="@color/gris"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correo2" />

    <EditText
        android:id="@+id/et_matricula"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/boton_transparente"
        android:ems="10"
        android:fontFamily="@font/bold"
        android:hint="@string/txt_matricula"
        android:inputType="number"
        android:textColor="@color/gris"
        android:textColorHint="@color/gris"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/et_nombre2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:fontFamily="@font/bold"
        android:text="@string/st_bienvenido"
        android:textColor="@color/negro"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:fontFamily="@font/light"
        android:text="@string/st_datos"
        android:textColor="@color/negro"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/light"
        android:text="@string/st_yatengo"
        android:textColor="@color/negro"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_iniciarse"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_iniciarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:fontFamily="@font/bold"
        android:stateListAnimator="@null"
        android:text="@string/st_iniciars"
        android:textAllCaps="false"
        android:textColor="@color/azul"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/ad_info"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="104dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_telefonoeme"
        app:layout_constraintTop_toBottomOf="@+id/et_password2"
        app:srcCompat="@drawable/ic_infoadvertencia" />

</androidx.constraintlayout.widget.ConstraintLayout>